初始化数据，增加新增项目用例

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -1,20 +1,20 @@
 [log]
-sh_level:DEBUG
-fh_level:INFO
-log_level:DEBUG
+sh_level = DEBUG
+fh_level = INFO
+log_level = DEBUG
 
 [api]
-baseUrl:http://api.lemonban.com/futureloan
-headers:{"X-Lemonban-Media-Type":"lemonban.v2","content-type":"application/json"}
+baseurl = http://api.lemonban.com/futureloan
+headers = {"X-Lemonban-Media-Type":"lemonban.v2","content-type":"application/json"}
 
 [mysql]
-host:api.lemonban.com
-port:3306
-user:future
-password:123456
-database:futureloan
-
+host = api.lemonban.com
+port = 3306
+user = future
+password = 123456
+database = futureloan
 
 [testdata]
-mobile_phone:13015047360
-pwd:11111111
+mobile_phone = 13106134698
+pwd = 111111111
+
