新增审核项目测试用例

--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -15,6 +15,10 @@ password = 123456
 database = futureloan
 
 [testdata]
-mobile_phone = 13106134698
+mobile_phone = 13153584696
 pwd = 111111111
+admin_mobile = 13185222978
+invest_mobile = 13174093951
+admin_pwd = 111111111
+invest_pwd = 111111111
 
